--- a/index.html
+++ b/index.html
@@ -30,13 +30,16 @@
 				}
 			});
 		</script>		
-		<script type="text/javascript" src="aprth/js/core/config.js"></script>
-		<script type="text/javascript" src="aprth/js/core/utils.js"></script>
-		<script type="text/javascript" src="aprth/js/core/client.js"></script>		
+		<script type="text/javascript" src="aprth/js/resources/dicts.js"></script>
 		<script type="text/javascript" src="aprth/js/resources/lang.js"></script>
 		<script type="text/javascript" src="aprth/js/resources/menus.js"></script>		
+		<script type="text/javascript" src="aprth/js/core/config.js"></script>
+		<script type="text/javascript" src="aprth/js/core/utils.js"></script>
+		<script type="text/javascript" src="aprth/js/core/client.js"></script>
 		<script type="text/javascript" src="aprth/js/objects/obj_auth.js"></script>
-		<script type="text/javascript" src="aprth/js/objects/obj_form.js"></script>		
+		<script type="text/javascript" src="aprth/js/objects/obj_form.js"></script>
+		<script type="text/javascript" src="aprth/js/objects/obj_options.js"></script>
+		<script type="text/jsx" src="aprth/js/components/options_selector.js"></script>
 		<script type="text/jsx" src="aprth/js/components/message_inline.js"></script>
 		<script type="text/jsx" src="aprth/js/components/message_loader.js"></script>
 		<script type="text/jsx" src="aprth/js/components/message_box.js"></script>
