Раздел "Список рассылки"

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<script type="text/jsx" src="aprth/js/units/default.js"></script>
 		<script type="text/jsx" src="aprth/js/units/unit404.js"></script>
 		<script type="text/jsx" src="aprth/js/units/articles_editor.js"></script>
+		<script type="text/jsx" src="aprth/js/units/mail_list.js"></script>
 		<script type="text/jsx" src="aprth/js/units/main.js"></script>
 		<script type="text/jsx" src="aprth/js/app.js"></script>
 	</head>
